# DrumSynthCell

./: .gitignore  CLAUDE.md  CMakeLists.txt  Drum_Synth_PRD.md  Notes.md  Transmod.md  documentation.md
Source/: CMakeLists.txt  DrumVoice.cpp  DrumVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransMod.h
